terraform-aws-vpc/peering.tf
resource "aws_vpc_peering_connection" "peer"{
    count=var.is_peering_required?1:0
    vpc_id=aws_vpc.this.id #requestor
    peer_vpc_id=local.default_vpc_id
    auto_accept=true
    tags=merge(
        var.common_tags,
        var.peering_tags,
        {
            Name="${local.resource_name}-peering"
        }
    )
}

#route from public route  of "this vpc" to default vpc route
resource "aws_route" "public_peer"{
    count=var.is_peering_required?1:0
    destination_cidr_block=local.default_vpc_cidr
    route_table_id=aws_route_table.public.id
    vpc_peering_connection_id=aws_vpc_peering_connection.peer[count.index].id

}

#route from private route  of "this vpc" to default vpc route
resource "aws_route" "private_peer"{
    count=var.is_peering_required?1:0
    route_table_id=aws_route_table.private.id
    destination_cidr_block=local.default_vpc_cidr
    vpc_peering_connection_id=aws_vpc_peering_connection.peer[count.index].id
}

#route from database route  of "this vpc" to default vpc route
resource "aws_route" "database_peer"{
    count=var.is_peering_required?1:0
    route_table_id=aws_route_table.database.id
    destination_cidr_block=local.default_vpc_cidr
    vpc_peering_connection_id=aws_vpc_peering_connection.peer[count.index].id
}

#route from main route  of "default vpc" to this vpc route [reverse route]
resource "aws_route" "default_peer"{
    count=var.is_peering_required?1:0
    route_table_id=data.aws_route_table.main.id
    destination_cidr_block=var.cidr_block
    vpc_peering_connection_id=aws_vpc_peering_connection.peer[count.index].id
}
